--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
 
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style_2.css">
 
     <script src="./script.js"></script>
     <link rel="stylesheet" href="./Asset/bootstrap.min.css">
@@ -48,7 +49,7 @@
         }
     </style>
 
-    <nav class="navbar navbar-expand-lg sticky-top bg-light">
+    <nav class="navbar navbar-expand-lg sticky-top">
         <div class="container">
             <!-- Toggler Button for mobile view -->
             <button class="navbar-toggler me-auto" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
@@ -297,7 +298,7 @@
             <tr>
                 <th>Product</th>
                 <th>Price</th>
-                <th>Quantity</th>
+                <th style="width: 50px;">Quantity</th>
                 <th>Subtotal</th> <!-- Changed "Total" to "Subtotal" -->
                 <th></th>
             </tr>
@@ -463,14 +464,6 @@
                 </div>
             </div>
 
-
-
-
-
-
-
-
-
         </div>
 
 
@@ -603,9 +596,152 @@
     </div>
 
 
-
-
 </div>
+
+
+
+
+    <!-- footer -->
+    <div class="container-fluid footer pb-5 fancy-box">
+        <div class="container">
+            <div class="row row-cols-4 pt-5">
+                <div class="col-12 col-sm-12 col-lg-3 col-md-6 pt-5">
+                    <img src="./logo/shalik.svg" style="width: 200px;" alt="" srcset="">
+                    <p class="text-start pt-4" style="font-size: 0.9rem;">It helps designers plan out where the content
+                        will sit, the content to be written and approved.
+                    </p>
+                    <div class="row row-cols-4 gy-4">
+
+                        <div class="col-3"><button class="ico-box"><i class="fa-brands fa-facebook-f"
+                                    style="color: #ffffff;"></i></button></div>
+                        <div class="col-3"><button class="ico-box"><i class="fa-brands fa-google-plus-g"
+                                    style="color: #ffffff;"></i></button></div>
+                        <div class="col-3"><button class="ico-box"><i class="fa-brands fa-instagram"
+                                    style="color: #ffffff;"></i></button></div>
+                        
+                        <!-- <div class="col icon-box"><i class="fa-brands fa-facebook-f" style="color: #ffffff;"></i></div>
+                     <div class="col icon-box"><i class="fa-brands fa-google-plus-g" style="color: #ffffff;"></i>
+                     </div>
+                     <div class="col icon-box"><i class="fa-brands fa-instagram" style="color: #ffffff;"></i></div>
+                     <div class="col icon-box"><i class="fa-brands fa-pinterest-p" style="color: #ffffff;"></i></div> -->
+                    </div>
+                </div>
+                <div class="col-12 col-sm-12 col-lg-3 col-md-6 pt-5">
+                    <h4 class="text-start">Our Courses</h4>
+                    <div class="row">
+                        <div class="col-12 col-lg-6 col-md-6 p-0 mx-2 " style="list-style-type: none;">
+                            <li class="pt-4 footer-text"> > About us</li>
+                            <li class="pt-4 footer-text"> > Our Services</li>
+                            <li class="pt-4 footer-text"> > Doctors 1</li>
+                            <li class="pt-4 footer-text"> > Doctors 1</li>
+                            <li class="pt-4 footer-text"> > Events</li>
+                        </div>
+                        <div class="col p-0  mx-2" style="list-style-type: none;">
+                            <li class="pt-4 footer-text"> > Contact us</li>
+                            <li class="pt-4 footer-text"> > Our Process</li>
+                            <li class="pt-4 footer-text"> > FAQ </li>
+                            <li class="pt-4 footer-text"> > Department</li>
+                            <li class="pt-4 footer-text"> > Member</li>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-12 col-lg-3 col-md-6 pt-5">
+                    <h4 class="text-start">Payment Accepted</h4>
+                    <div class="row pt-4">
+
+                        <div class="row d-flex">
+
+                            <div class="col-4">
+                                <img src="./logo/bkash.png" style="width: 85px;height:80px;"
+                                    class="rounded" alt="" srcset="">
+                            </div>
+
+                            <div class="col-4">
+                                <img src="./logo/rocket.png" style="width: 85px;height:80px;"
+                                    class="rounded" alt="" srcset="">
+                            </div>
+
+                            <!-- <div class="col">
+                                <p style="font-size: 1rem">Get The Execise Limited Mobility</p>
+                            </div> -->
+
+                        </div>
+
+                        <div>
+                            <hr style="width: 250px;">
+                        </div>
+
+                        <div class="row d-flex">
+
+                            <div class="col-4">
+                                <img src="./logo/nogod.png" style="width: 85px;height:80px;"
+                                    class="rounded" alt="" srcset="">
+                            </div>
+
+                            <div class="col-4">
+                                <img src="./logo/nexus.jpg" style="width: 85px;height:80px;"
+                                    class="rounded" alt="" srcset="">
+                            </div>
+                            <!-- <div class="col">
+                                <p style="font-size: 1rem">Get The Execise Limited Mobility</p>
+                            </div> -->
+
+                        </div>
+
+                        
+                    </div>
+                </div>
+                <div class="col-12 col-sm-12 col-lg-3 col-md-6 pt-5">
+                    <h4 class="text-start">Contact Us</h4>
+                    <div class="row pt-4">
+                        <div class="col-1 col-lg-2"><i class="fa-solid fa-phone" style="color: #9900ff;"></i></div>
+                        <div class="col">+88 01864-343116</div>
+                    </div>
+                    <div class="row pt-4">
+                        <div class="col-1 col-md-1 col-lg-2"><i class="fa-solid fa-envelope"
+                                style="color: #9900ff;"></i></div>
+                        <div class="col-6 col-md-6">shalikbeauty@gmail.com</div>
+                    </div>
+                    <div class="row pt-4">
+                        <div class="col-1 col-lg-2"><i class="fa-solid fa-location-dot" style="color: #9900ff;"></i>
+                        </div>
+                        <div class="col">#H-292, Ashkona, Uttara, Dakshinkhan, Haji Camp-1351, Dhaka, Bangladesh</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- footer end-->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 <!-- Bootstrap Bundle JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
